# demo-mcp

./: .gitignore  README.md  ignore_test.ipynb  pyproject.toml
00-quick start/: agentic_model.py  base_model.py  main.py  prompt.py  tools.py
00-simple/: base_model.py  main.py  prompt.py
01-simple/: cfig.json  json_creator.py  model.py  tools.py
mcp-project/: pyproject.toml
mcp_project/: config.json  pyproject.toml
mcp_project/agent/: agent.py
mcp_project/mcp_server/: server.py
mcp_project/tests/: llm_test.py
mcp_project/tools/: air_quality.py
mcp_project/utils/: config_manager.py
src/: config.json
src/agent/: __init__.py  agent.py  client.py
src/client/: client.py
src/mcp_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_server/: server.py
src/server/: server.py
src/tools/: __init__.py  air_quality.py  geocode.py  random_generator.py  weather.py
src/utils/: config_manager.py  prompt.py  structure_format.py
tests/: llm_test.py  test_client.py  test_llm.py
