[project]
name = "demo-mcp"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"langchain",
	"langchain-ollama",
	"langchain-mcp-adapters",
	"fastmcp",
	"langchain-openai>=1.1.0",
	"requests>=2.32.5",
	"notebook>=7.5.0",
	"beautifulsoup4>=4.14.3",
	"mcp[cli]>=1.22.0",
]

[tool.uv.workspace]
members = [
    "mcp-project",
]
