[project]
name = "mcp-project"
version = "1.1.0"
description = "agentic llm "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.13.3",
    "langchain>=1.1.2",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "loguru>=0.7.3",
    "httpx",
    "langchain-ollama>=1.0.1",
    "notebook>=7.5.1",
]

[build-system]
requires = ["setuptools>=61.0", "uv"]
build-backend = "setuptools.build_meta"
